--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/interactive_marker_twist_server
-	previous = 
-	base = 704b08f
+	previous = 704b08f
+	base = 720e57a
 	trim = 
 	trimbase = 
