--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.1.0-4": ["Mon Jun 17 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"], "2.1.0-3": ["Thu Apr 18 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"], "2.1.0-2": ["Wed Mar 06 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"]}
+{"2.1.1-1": ["Thu Dec 19 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"], "2.1.0-4": ["Mon Jun 17 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"], "2.1.0-3": ["Thu Apr 18 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"], "2.1.0-2": ["Wed Mar 06 2024", "Mike Purvis", "mpurvis@clearpathrobotics.com"]}
